# servant-tutorial

./: .envrc  README.md  flake.nix  servant-tutorial.cabal
client/: Main.hs
server/: Main.hs
src/: Api.hs
src/Api/: Movie.hs  User.hs
